--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
 
 	<head>
+		<title>Learn to code HTML and CSS</title>
 	</head>
 	<body style="margin:0;padding:0;">
-		<header style="color:#FF0000;height:70px;width:100%">	
+		<header style="background-color:#FF0000;height:70px;width:100%">	
 		</header>
-		<footer style="color:#00FF00;height:60px;width:100%;text-align:center;position:absolute;bottom:0">
+		<footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;position:absolute;bottom:0;align-items:center;">
 			<p>Best School</p>
 		</footer>
 	</body>
