--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 	<head>
@@ -18,9 +17,12 @@
                 height: 60px;
                 width: 100%;
                 align-items: center;
-                text-align: center;
+                
                 position: absolute;
                 bottom: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         </style>
 	</head>
